Tue Jul 12 05:28:56 UTC 2006  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/simpleTCP/SimpleTcpAcceptor.h:
        * dds/DCPS/transport/simpleTCP/SimpleTcpConnection.inl:
        * dds/DCPS/transport/simpleTCP/SimpleTcpTransport.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpTransport.h:

          Fixed a circular include dependency problem. This problem shown on 
          gcc3.3.3 builds.

Mon Jul  3 09:23:33 UTC 2006  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/DataLink.inl:
        * dds/DCPS/transport/framework/QueueTaskBase_T.h:
        * dds/DCPS/transport/framework/TransportImpl.h:
        * dds/DCPS/transport/simpleUDP/SimpleUdpTransport.inl:

          Fixed build errors and warning on Linux.

Sun Jul  3 8:42:38 UTC 2006  Yan Dai  <dai_y@ociweb.com>

        These changes support thread-per-connection send feature. The 
        new configuration "thread_per_connection" is added to determine if
        the transport needs create a new thread for a datalink/connection 
        to send samples under normal traffic (no backpressure). If 
        thread_per_connection is 1, the publisher always creates a seperate 
        send thread for each datalink/connection to do the send instead of 
        sending to each remote one by one by the same thread. 
        
        * dds/DdsDcps.mpc:
   
          Added new classes to support thread-per-connection send feature.
          
        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/DataLink.inl:
        
          Added the new task - ThreadPerConnectionSendTask object to handle
          sending in a seperate thread.
          
        * dds/DCPS/transport/framework/QueueTaskBase_T.h:
        
          A simple template ACE task that manages a request queue. The subclass