@@ -1,3 +1,11 @@
+Wed Jul 12 17:34:59 UTC 2006  Yan Dai  <dai_y@ociweb.com>
+
+        * dds/DCPS/transport/simpleTCP/SimpleTcpTransport.cpp:
+        * dds/DCPS/transport/simpleTCP/SimpleTcpTransport.h:
+
+          Fixed a circular include dependency problem. This problem shown on
+          vc71 builds.
+
 Tue Jul 12 05:28:56 UTC 2006  Yan Dai  <dai_y@ociweb.com>
 
         * dds/DCPS/transport/simpleTCP/SimpleTcpAcceptor.h:
